# JiraAutomation

./: Dockerfile  ProjectPAI2.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
scripts/: predict.py  train.ipynb  train.py
src/: api.ipynb  api.py  config.py  data.py  models.py  service.py  storage.py
src/ui/: app.py
