[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-automation"
version = "0.1.0"
description = "Jira ML Automation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "huggingface_hub>=0.20.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]